fix: details arrows not showing on android

--- a/themes/custom/assets/scss/custom.scss
+++ b/themes/custom/assets/scss/custom.scss
@@ -116,11 +116,11 @@ details[open] summary .additional {
 }
 
 summary::after {
-  content: "⯈";
+  content: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20color=%22white%22%20stroke=%22currentColor%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22%20class=%22feather%20feather-chevron-down%22%3E%3Cpolyline%20points=%226%209%2012%2015%2018%209%22%3E%3C/polyline%3E%3C/svg%3E%0A");
   text-align: right;
 }
 details[open] summary:after {
-  content: "⯆";
+  content: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20color=%22white%22%20stroke=%22currentColor%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22%20class=%22feather%20feather-chevron-up%22%3E%3Cpolyline%20points=%2218%2015%2012%209%206%2015%22%3E%3C/polyline%3E%3C/svg%3E%0A");
   text-align: right;
 }
 
